@@ -1,9 +1,13 @@
 package de.bahnhoefe.deutschlands.bahnhofsfotos;
 
+import static android.content.Intent.createChooser;
+import static android.graphics.Color.WHITE;
+
 import android.animation.ValueAnimator;
 import android.app.ActionBar;
-import android.app.ProgressDialog;
+import android.app.Activity;
 import android.app.TaskStackBuilder;
+import android.content.ActivityNotFoundException;
 import android.content.ComponentName;
 import android.content.Context;
 import android.content.Intent;
@@ -22,7 +26,6 @@ import android.text.TextUtils;
 import android.text.method.LinkMovementMethod;
 import android.util.Log;
 import android.view.ContextThemeWrapper;
-import android.view.Display;
 import android.view.Menu;
 import android.view.MenuItem;
 import android.view.View;
@@ -34,6 +37,9 @@ import android.widget.ListAdapter;
 import android.widget.TextView;
 import android.widget.Toast;
 
+import androidx.activity.result.ActivityResultLauncher;
+import androidx.activity.result.contract.ActivityResultContracts;
+import androidx.annotation.NonNull;
 import androidx.annotation.Nullable;
 import androidx.appcompat.app.AlertDialog;
 import androidx.appcompat.app.AppCompatActivity;
@@ -55,14 +61,16 @@ import java.io.IOException;
 import java.io.UnsupportedEncodingException;
 import java.net.URLConnection;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Locale;
+import java.util.Objects;
 import java.util.Set;
 import java.util.zip.CRC32;
 import java.util.zip.CheckedInputStream;
 
-import de.bahnhoefe.deutschlands.bahnhofsfotos.Dialogs.SimpleDialogs;
+import de.bahnhoefe.deutschlands.bahnhofsfotos.dialogs.SimpleDialogs;
 import de.bahnhoefe.deutschlands.bahnhofsfotos.databinding.ActivityDetailsBinding;
 import de.bahnhoefe.deutschlands.bahnhofsfotos.databinding.ReportProblemBinding;
 import de.bahnhoefe.deutschlands.bahnhofsfotos.databinding.StationInfoBinding;
@@ -90,9 +98,6 @@ import retrofit2.Call;
 import retrofit2.Callback;
 import retrofit2.Response;
 
-import static android.content.Intent.createChooser;
-import static android.graphics.Color.WHITE;
-
 public class DetailsActivity extends AppCompatActivity implements ActivityCompat.OnRequestPermissionsResultCallback, BitmapAvailableHandler {
 
     private static final String TAG = DetailsActivity.class.getSimpleName();
@@ -104,8 +109,6 @@ public class DetailsActivity extends AppCompatActivity implements ActivityCompat
     public static final String EXTRA_LATITUDE = "latitude";
     public static final String EXTRA_LONGITUDE = "longitude";
 
-    private static final int REQUEST_TAKE_PICTURE = 2;
-    private static final int REQUEST_SELECT_PICTURE = 3;
     private static final int ALPHA = 128;
 
     private static final String LINK_FORMAT = "<b><a href=\"%s\">%s</a></b>";
@@ -141,7 +144,7 @@ public class DetailsActivity extends AppCompatActivity implements ActivityCompat
         final Set<String> countryCodes = baseApplication.getCountryCodes();
         countries = dbAdapter.fetchCountriesWithProviderApps(countryCodes);
 
-        getSupportActionBar().setDisplayHomeAsUpEnabled(true);
+        Objects.requireNonNull(getSupportActionBar()).setDisplayHomeAsUpEnabled(true);
 
         binding.details.imageview.setOnClickListener(v -> onPictureClicked());
         binding.details.buttonTakePicture.setOnClickListener(
@@ -154,7 +157,7 @@ public class DetailsActivity extends AppCompatActivity implements ActivityCompat
                 v -> reportProblem()
         );
         binding.details.buttonUpload.setOnClickListener(v -> {
-                if (!isLoggedIn()) {
+                if (isNotLoggedIn()) {
                     Toast.makeText(this, R.string.please_login, Toast.LENGTH_LONG).show();
                 } else if (TextUtils.isEmpty(binding.details.etbahnhofname.getText())) {
                     Toast.makeText(this, R.string.station_title_needed, Toast.LENGTH_LONG).show();
@@ -232,7 +235,7 @@ public class DetailsActivity extends AppCompatActivity implements ActivityCompat
                     }
 
                     // check for local photo
-                    final File localFile = getStoredMediaFile(upload);
+                    final var localFile = getStoredMediaFile(upload);
                     if (localFile != null && localFile.canRead()) {
                         new SimpleDialogs().confirm(this, R.string.local_photo_exists, (dialog, which) -> {
                             setPictureButtonsEnabled(true);
@@ -287,56 +290,102 @@ public class DetailsActivity extends AppCompatActivity implements ActivityCompat
         return station != null && TextUtils.equals(nickname, station.getPhotographer());
     }
 
-    private boolean isLoggedIn() {
-        return !TextUtils.isEmpty(password);
+    private boolean isNotLoggedIn() {
+        return TextUtils.isEmpty(password);
     }
+
+    private final ActivityResultLauncher<Intent> imageCaptureResultLauncher = registerForActivityResult(new ActivityResultContracts.StartActivityForResult(),
+            result -> {
+                if (result.getResultCode() == Activity.RESULT_OK) {
+                    try {
+                        verifyCurrentPhotoUploadExists();
+                        final var storagePictureFile = getStoredMediaFile(upload);
+                        // die Kamera-App sollte auf temporären Cache-Speicher schreiben, wir laden das Bild von
+                        // dort und schreiben es in Standard-Größe in den permanenten Speicher
+                        final var cameraRawPictureFile = getCameraTempFile();
+                        final var options = new BitmapFactory.Options();
+                        options.inJustDecodeBounds = true; // just query the image size in the first step
+                        BitmapFactory.decodeFile(cameraRawPictureFile.getPath(), options);
+
+                        final int sampling = options.outWidth / Constants.STORED_PHOTO_WIDTH;
+                        if (sampling > 1) {
+                            options.inSampleSize = sampling;
+                        }
+                        options.inJustDecodeBounds = false;
+
+                        saveScaledBitmap(storagePictureFile, BitmapFactory.decodeFile(cameraRawPictureFile.getPath(), options));
+                        setLocalBitmap(upload);
+                        FileUtils.deleteQuietly(cameraRawPictureFile);
+                    } catch (final Exception e) {
+                        Log.e(TAG, "Error processing photo", e);
+                        Toast.makeText(getApplicationContext(), getString(R.string.error_processing_photo) + e.getMessage(), Toast.LENGTH_LONG).show();
+                    }
+                }
+            });
 
     void takePicture() {
         if (!canSetPhoto() || !getPackageManager().hasSystemFeature(PackageManager.FEATURE_CAMERA_ANY)) {
             return;
         }
 
-        if (!isLoggedIn()) {
+        if (isNotLoggedIn()) {
             Toast.makeText(this, R.string.please_login, Toast.LENGTH_LONG).show();
         }
 
-        final Intent intent = new Intent(MediaStore.ACTION_IMAGE_CAPTURE);
-        if (intent.resolveActivity(getPackageManager()) != null) {
-            verifyCurrentPhotoUploadExists();
-            final File file = getCameraTempFile();
-            final Uri photoURI = FileProvider.getUriForFile(this, BuildConfig.APPLICATION_ID + ".fileprovider", file);
-            intent.putExtra(MediaStore.EXTRA_OUTPUT, photoURI);
-            intent.putExtra(MediaStore.EXTRA_MEDIA_ALBUM, getResources().getString(R.string.app_name));
-            intent.putExtra(MediaStore.EXTRA_MEDIA_TITLE, binding.details.etbahnhofname.getText());
-            intent.addFlags(Intent.FLAG_GRANT_WRITE_URI_PERMISSION);
-            startActivityForResult(intent, REQUEST_TAKE_PICTURE);
+        verifyCurrentPhotoUploadExists();
+        final var photoURI = FileProvider.getUriForFile(this, BuildConfig.APPLICATION_ID + ".fileprovider", getCameraTempFile());
+        final var intent = new Intent(MediaStore.ACTION_IMAGE_CAPTURE);
+        intent.putExtra(MediaStore.EXTRA_OUTPUT, photoURI);
+        intent.putExtra(MediaStore.EXTRA_MEDIA_ALBUM, getResources().getString(R.string.app_name));
+        intent.putExtra(MediaStore.EXTRA_MEDIA_TITLE, binding.details.etbahnhofname.getText());
+        intent.addFlags(Intent.FLAG_GRANT_WRITE_URI_PERMISSION);
+        try {
+            imageCaptureResultLauncher.launch(intent);
+        } catch (final ActivityNotFoundException exception) {
+            Toast.makeText(this, R.string.no_image_capture_app_found, Toast.LENGTH_LONG).show();
         }
     }
+
+    private final ActivityResultLauncher<String> selectPictureResultLauncher = registerForActivityResult(new ActivityResultContracts.GetContent(),
+            uri -> {
+                try {
+                    verifyCurrentPhotoUploadExists();
+                    final var bitmap = getBitmapFromUri(uri);
+                    final int sampling = bitmap.getWidth() / Constants.STORED_PHOTO_WIDTH;
+                    var scaledScreen = bitmap;
+                    if (sampling > 1) {
+                        scaledScreen = Bitmap.createScaledBitmap(bitmap, bitmap.getWidth() / sampling, bitmap.getHeight() / sampling, false);
+                    }
+
+                    saveScaledBitmap(getStoredMediaFile(upload), scaledScreen);
+                    setLocalBitmap(upload);
+                } catch (final Exception e) {
+                    Log.e(TAG, "Error processing photo", e);
+                    Toast.makeText(getApplicationContext(), getString(R.string.error_processing_photo) + e.getMessage(), Toast.LENGTH_LONG).show();
+                }
+            });
+
 
     void selectPicture() {
         if (!canSetPhoto()) {
             return;
         }
 
-        if (!isLoggedIn()) {
+        if (isNotLoggedIn()) {
             Toast.makeText(this, R.string.please_login, Toast.LENGTH_LONG).show();
             return;
         }
 
-        final Intent intent = new Intent();
-        intent.setType("image/*");
-        intent.setAction(Intent.ACTION_GET_CONTENT);
-        startActivityForResult(Intent.createChooser(intent, getString(R.string.select_picture)), REQUEST_SELECT_PICTURE);
+        selectPictureResultLauncher.launch("image/*");
     }
 
     void reportProblem() {
-        if (!isLoggedIn()) {
+        if (isNotLoggedIn()) {
             Toast.makeText(this, R.string.please_login, Toast.LENGTH_LONG).show();
             return;
         }
 
-        final AlertDialog.Builder builder = new AlertDialog.Builder(new ContextThemeWrapper(this, R.style.AlertDialogCustom));
-        final ReportProblemBinding reportProblemBinding = ReportProblemBinding.inflate(getLayoutInflater());
+        final var reportProblemBinding = ReportProblemBinding.inflate(getLayoutInflater());
         if (upload != null && upload.isProblemReport()) {
             reportProblemBinding.etProblemComment.setText(upload.getComment());
         }
@@ -357,6 +406,7 @@ public class DetailsActivity extends AppCompatActivity implements ActivityCompat
             reportProblemBinding.problemType.setSelection(selected);
         }
 
+        final var builder = new AlertDialog.Builder(new ContextThemeWrapper(this, R.style.AlertDialogCustom));
         builder.setTitle(R.string.report_problem)
                 .setView(reportProblemBinding.getRoot())
                 .setIcon(R.drawable.ic_bullhorn_48px)
@@ -393,10 +443,10 @@ public class DetailsActivity extends AppCompatActivity implements ActivityCompat
                 baseApplication.getDbAdapter().updateUpload(upload);
             }
 
-            rsapi.reportProblem(RSAPI.Helper.getAuthorizationHeader(email, password), new ProblemReport(station.getCountry(), bahnhofId, comment, type)).enqueue(new Callback<InboxResponse>() {
+            rsapi.reportProblem(RSAPI.getAuthorizationHeader(email, password), new ProblemReport(station.getCountry(), bahnhofId, comment, type)).enqueue(new Callback<>() {
                 @Override
-                public void onResponse(final Call<InboxResponse> call, final Response<InboxResponse> response) {
-                    InboxResponse inboxResponse = null;
+                public void onResponse(@NonNull final Call<InboxResponse> call, @NonNull final Response<InboxResponse> response) {
+                    final InboxResponse inboxResponse;
                     if (response.isSuccessful()) {
                         inboxResponse = response.body();
                     } else if (response.code() == 401) {
@@ -404,7 +454,7 @@ public class DetailsActivity extends AppCompatActivity implements ActivityCompat
                         return;
                     } else {
                         final Gson gson = new Gson();
-                        inboxResponse = gson.fromJson(response.errorBody().charStream(),InboxResponse.class);
+                        inboxResponse = gson.fromJson(response.errorBody().charStream(), InboxResponse.class);
                         if (inboxResponse.getState() == null) {
                             inboxResponse.setState(InboxResponse.InboxResponseState.ERROR);
                         }
@@ -424,65 +474,13 @@ public class DetailsActivity extends AppCompatActivity implements ActivityCompat
                 }
 
                 @Override
-                public void onFailure(final Call<InboxResponse> call, final Throwable t) {
+                public void onFailure(@NonNull final Call<InboxResponse> call, @NonNull final Throwable t) {
                     Log.e(TAG, "Error reporting problem", t);
                     new SimpleDialogs().confirm(DetailsActivity.this,
                             String.format(getText(R.string.problem_report_failed).toString(), t.getMessage()));
                 }
             });
         });
-    }
-
-    @Override
-    protected void onActivityResult(final int requestCode, final int resultCode, final Intent data) {
-        super.onActivityResult(requestCode, resultCode, data);
-        if (resultCode != RESULT_OK) {
-            return;
-        }
-
-        try {
-            verifyCurrentPhotoUploadExists();
-            final File storagePictureFile = getStoredMediaFile(upload);
-            if (requestCode == REQUEST_TAKE_PICTURE) {
-                // die Kamera-App sollte auf temporären Cache-Speicher schreiben, wir laden das Bild von
-                // dort und schreiben es in Standard-Größe in den permanenten Speicher
-                final File cameraRawPictureFile = getCameraTempFile();
-                final BitmapFactory.Options options = new BitmapFactory.Options();
-                options.inJustDecodeBounds = true; // just query the image size in the first step
-                BitmapFactory.decodeFile(
-                        cameraRawPictureFile.getPath(),
-                        options);
-
-                final int sampling = options.outWidth / Constants.STORED_PHOTO_WIDTH;
-                if (sampling > 1) {
-                    options.inSampleSize = sampling;
-                }
-                options.inJustDecodeBounds = false;
-
-                final Bitmap scaledScreen = BitmapFactory.decodeFile(
-                        cameraRawPictureFile.getPath(),
-                        options);
-
-                saveScaledBitmap(storagePictureFile, scaledScreen);
-                setLocalBitmap(upload);
-                FileUtils.deleteQuietly(cameraRawPictureFile);
-            } else if (requestCode == REQUEST_SELECT_PICTURE) {
-                final Uri selectedImageUri = data.getData();
-                final Bitmap bitmap = getBitmapFromUri(selectedImageUri);
-
-                final int sampling = bitmap.getWidth() / Constants.STORED_PHOTO_WIDTH;
-                Bitmap scaledScreen = bitmap;
-                if (sampling > 1) {
-                    scaledScreen = Bitmap.createScaledBitmap(bitmap, bitmap.getWidth() / sampling, bitmap.getHeight() / sampling, false);
-                }
-
-                saveScaledBitmap(storagePictureFile, scaledScreen);
-                setLocalBitmap(upload);
-            }
-        } catch (final Exception e) {
-            Log.e(TAG, "Error processing photo", e);
-            Toast.makeText(getApplicationContext(), getString(R.string.error_processing_photo) + e.getMessage(), Toast.LENGTH_LONG).show();
-        }
     }
 
     private void verifyCurrentPhotoUploadExists() {
@@ -514,11 +512,11 @@ public class DetailsActivity extends AppCompatActivity implements ActivityCompat
     }
 
     private Bitmap getBitmapFromUri(final Uri uri) throws IOException {
-        final ParcelFileDescriptor parcelFileDescriptor =
-                getContentResolver().openFileDescriptor(uri, "r");
-        final FileDescriptor fileDescriptor = parcelFileDescriptor.getFileDescriptor();
-        final Bitmap image = BitmapFactory.decodeFileDescriptor(fileDescriptor);
-        parcelFileDescriptor.close();
+        final Bitmap image;
+        try (final ParcelFileDescriptor parcelFileDescriptor = getContentResolver().openFileDescriptor(uri, "r")) {
+            final FileDescriptor fileDescriptor = parcelFileDescriptor.getFileDescriptor();
+            image = BitmapFactory.decodeFileDescriptor(fileDescriptor);
+        }
         return image;
     }
 
@@ -565,8 +563,7 @@ public class DetailsActivity extends AppCompatActivity implements ActivityCompat
 
         boolean hasProviderApps = false;
         if (station != null) {
-            final Country countryByCode = Country.getCountryByCode(countries, station.getCountry());
-            hasProviderApps = countryByCode.hasCompatibleProviderApps();
+            hasProviderApps = Country.getCountryByCode(countries, station.getCountry()).hasCompatibleProviderApps();
         }
         if (hasProviderApps) {
             enableMenuItem(menu, R.id.provider_android_app);
@@ -610,16 +607,13 @@ public class DetailsActivity extends AppCompatActivity implements ActivityCompat
         } else if (itemId == R.id.station_info) {
             showStationInfo(null);
         } else if (itemId == R.id.provider_android_app) {
-            final Country country = Country.getCountryByCode(countries, station.getCountry());
-            final List<ProviderApp> providerApps = country.getCompatibleProviderApps();
+            final List<ProviderApp> providerApps = Country.getCountryByCode(countries, station.getCountry()).getCompatibleProviderApps();
             if (providerApps.size() == 1) {
                 providerApps.get(0).openAppOrPlayStore(this);
             } else if (providerApps.size() > 1) {
-                final CharSequence[] appNames = new CharSequence[providerApps.size()];
-                for (int i = 0; i < providerApps.size(); i++) {
-                    appNames[i] = providerApps.get(i).getName();
-                }
-                new SimpleDialogs().simpleSelect(this, getResources().getString(R.string.choose_provider_app), appNames, -1, (dialog, which) -> {
+                final CharSequence[] appNames = providerApps.stream()
+                        .map(ProviderApp::getName).toArray(CharSequence[]::new);
+                new SimpleDialogs().simpleSelect(this, getResources().getString(R.string.choose_provider_app), appNames, (dialog, which) -> {
                     if (which >= 0 && providerApps.size() > which) {
                         providerApps.get(which).openAppOrPlayStore(DetailsActivity.this);
                     }
@@ -656,7 +650,6 @@ public class DetailsActivity extends AppCompatActivity implements ActivityCompat
     }
 
     public void showStationInfo(final View view) {
-        final AlertDialog.Builder builder = new AlertDialog.Builder(new ContextThemeWrapper(this, R.style.AlertDialogCustom));
         final StationInfoBinding stationInfoBinding = StationInfoBinding.inflate(getLayoutInflater());
         stationInfoBinding.id.setText(station != null ? station.getId() : "");
 
@@ -667,13 +660,13 @@ public class DetailsActivity extends AppCompatActivity implements ActivityCompat
         stationInfoBinding.active.setText(station != null && station.isActive() ? R.string.active : R.string.inactive);
         stationInfoBinding.owner.setText(station != null && station.getPhotographer() != null ? station.getPhotographer() : "");
 
-        builder.setTitle(binding.details.etbahnhofname.getText())
+        new AlertDialog.Builder(new ContextThemeWrapper(this, R.style.AlertDialogCustom))
+                .setTitle(binding.details.etbahnhofname.getText())
                 .setView(stationInfoBinding.getRoot())
                 .setIcon(R.mipmap.ic_launcher)
-                .setPositiveButton(android.R.string.ok, null);
-
-        final AlertDialog alertDialog = builder.create();
-        alertDialog.show();
+                .setPositiveButton(android.R.string.ok, null)
+                .create()
+                .show();
     }
 
     private void uploadPhoto() {
@@ -717,11 +710,7 @@ public class DetailsActivity extends AppCompatActivity implements ActivityCompat
             uploadBinding.spCountries.setSelection(selected);
         }
 
-        if (android.os.Build.VERSION.SDK_INT >= android.os.Build.VERSION_CODES.N) {
-            uploadBinding.txtPanorama.setText(Html.fromHtml(getString(R.string.panorama_info),Html.FROM_HTML_MODE_COMPACT));
-        } else {
-            uploadBinding.txtPanorama.setText(Html.fromHtml(getString(R.string.panorama_info)));
-        }
+        uploadBinding.txtPanorama.setText(Html.fromHtml(getString(R.string.panorama_info),Html.FROM_HTML_MODE_COMPACT));
         uploadBinding.txtPanorama.setMovementMethod(LinkMovementMethod.getInstance());
         uploadBinding.txtPanorama.setLinkTextColor(Color.parseColor("#c71c4d"));
 
@@ -764,11 +753,8 @@ public class DetailsActivity extends AppCompatActivity implements ActivityCompat
             }
             alertDialog.dismiss();
 
-            final ProgressDialog progress = new ProgressDialog(DetailsActivity.this);
-            progress.setMessage(getResources().getString(R.string.send));
-            progress.setTitle(getResources().getString(R.string.app_name));
-            progress.setProgressStyle(ProgressDialog.STYLE_SPINNER);
-            progress.show();
+            assert binding.details.progressBar != null;
+            binding.details.progressBar.setVisibility(View.VISIBLE);
 
             String stationTitle = binding.details.etbahnhofname.getText().toString();
             String comment = uploadBinding.etComment.getText().toString();
@@ -776,8 +762,8 @@ public class DetailsActivity extends AppCompatActivity implements ActivityCompat
             upload.setComment(comment);
 
             try {
-                stationTitle = URLEncoder.encode(binding.details.etbahnhofname.getText().toString(), "UTF-8");
-                comment = URLEncoder.encode(comment, "UTF-8");
+                stationTitle = URLEncoder.encode(binding.details.etbahnhofname.getText().toString(), String.valueOf(StandardCharsets.UTF_8));
+                comment = URLEncoder.encode(comment, String.valueOf(StandardCharsets.UTF_8));
             } catch (final UnsupportedEncodingException e) {
                 Log.e(TAG, "Error encoding station title or comment", e);
             }
@@ -785,26 +771,29 @@ public class DetailsActivity extends AppCompatActivity implements ActivityCompat
             baseApplication.getDbAdapter().updateUpload(upload);
 
             final File mediaFile = getStoredMediaFile(upload);
+            assert mediaFile != null;
             final RequestBody file = RequestBody.create(mediaFile, MediaType.parse(URLConnection.guessContentTypeFromName(mediaFile.getName())));
-            rsapi.photoUpload(RSAPI.Helper.getAuthorizationHeader(email, password), bahnhofId, station != null ? station.getCountry() : upload.getCountry(),
-                    stationTitle, latitude, longitude, comment, upload.getActive(), file).enqueue(new Callback<InboxResponse>() {
+            rsapi.photoUpload(RSAPI.getAuthorizationHeader(email, password), bahnhofId, station != null ? station.getCountry() : upload.getCountry(),
+                    stationTitle, latitude, longitude, comment, upload.getActive(), file).enqueue(new Callback<>() {
                 @Override
-                public void onResponse(final Call<InboxResponse> call, final Response<InboxResponse> response) {
-                    progress.dismiss();
-                    InboxResponse inboxResponse = null;
+                public void onResponse(@NonNull final Call<InboxResponse> call, @NonNull final Response<InboxResponse> response) {
+                    binding.details.progressBar.setVisibility(View.GONE);
+                    final InboxResponse inboxResponse;
                     if (response.isSuccessful()) {
                         inboxResponse = response.body();
                     } else if (response.code() == 401) {
                         new SimpleDialogs().confirm(DetailsActivity.this, R.string.authorization_failed);
                         return;
                     } else {
+                        assert response.errorBody() != null;
                         final Gson gson = new Gson();
-                        inboxResponse = gson.fromJson(response.errorBody().charStream(),InboxResponse.class);
+                        inboxResponse = gson.fromJson(response.errorBody().charStream(), InboxResponse.class);
                         if (inboxResponse.getState() == null) {
                             inboxResponse.setState(InboxResponse.InboxResponseState.ERROR);
                         }
                     }
 
+                    assert inboxResponse != null;
                     upload.setRemoteId(inboxResponse.getId());
                     upload.setInboxUrl(inboxResponse.getInboxUrl());
                     upload.setUploadState(inboxResponse.getState().getUploadState());
@@ -820,11 +809,10 @@ public class DetailsActivity extends AppCompatActivity implements ActivityCompat
                 }
 
                 @Override
-                public void onFailure(final Call<InboxResponse> call, final Throwable t) {
+                public void onFailure(@NonNull final Call<InboxResponse> call, @NonNull final Throwable t) {
                     Log.e(TAG, "Error uploading photo", t);
-                    if (progress.isShowing()) {
-                        progress.dismiss();
-                    }
+                    binding.details.progressBar.setVisibility(View.GONE);
+
                     new SimpleDialogs().confirm(DetailsActivity.this,
                             String.format(getText(InboxResponse.InboxResponseState.ERROR.getMessageId()).toString(), t.getMessage()));
                     fetchUploadStatus(upload); // try to get the upload state again
@@ -863,12 +851,12 @@ public class DetailsActivity extends AppCompatActivity implements ActivityCompat
         };
 
 
-        final ListAdapter adapter = new ArrayAdapter<NavItem>(
+        final ListAdapter adapter = new ArrayAdapter<>(
                 this,
                 android.R.layout.select_dialog_item,
                 android.R.id.text1,
                 items) {
-            public View getView(final int position, final View convertView, final ViewGroup parent) {
+            public View getView(final int position, final View convertView, @NonNull final ViewGroup parent) {
                 //Use super class to create the View
                 final View v = super.getView(position, convertView, parent);
                 final TextView tv = v.findViewById(android.R.id.text1);
@@ -892,7 +880,7 @@ public class DetailsActivity extends AppCompatActivity implements ActivityCompat
         navBuilder.setIcon(R.mipmap.ic_launcher);
         navBuilder.setTitle(R.string.navMethod);
         navBuilder.setAdapter(adapter, (dialog, navItem) -> {
-            String dlocation = "";
+            final String dlocation;
             Intent intent = null;
             switch (navItem) {
                 case 0:
@@ -990,7 +978,8 @@ public class DetailsActivity extends AppCompatActivity implements ActivityCompat
                             String.format(
                                     getText(R.string.license_tag).toString(),
                                     photographerText,
-                                    licenseText)
+                                    licenseText), Html.FROM_HTML_MODE_LEGACY
+
                         )
                 );
             } else {
@@ -1028,14 +1017,14 @@ public class DetailsActivity extends AppCompatActivity implements ActivityCompat
         final List<InboxStateQuery> stateQueries = new ArrayList<>();
         stateQueries.add(new InboxStateQuery(upload.getRemoteId(), upload.getCountry(), upload.getStationId()));
 
-        baseApplication.getRSAPI().queryUploadState(RSAPI.Helper.getAuthorizationHeader(baseApplication.getEmail(), baseApplication.getPassword()), stateQueries).enqueue(new Callback<List<InboxStateQuery>>() {
+        baseApplication.getRSAPI().queryUploadState(RSAPI.getAuthorizationHeader(baseApplication.getEmail(), baseApplication.getPassword()), stateQueries).enqueue(new Callback<>() {
             @Override
-            public void onResponse(final Call<List<InboxStateQuery>> call, final Response<List<InboxStateQuery>> response) {
+            public void onResponse(@NonNull final Call<List<InboxStateQuery>> call, @NonNull final Response<List<InboxStateQuery>> response) {
                 final List<InboxStateQuery> stateQueries = response.body();
                 if (stateQueries != null && !stateQueries.isEmpty()) {
                     final InboxStateQuery stateQuery = stateQueries.get(0);
                     binding.details.licenseTag.setText(getString(R.string.upload_state, getString(stateQuery.getState().getTextId())));
-                    binding.details.licenseTag.setTextColor(getResources().getColor(stateQuery.getState().getColorId()));
+                    binding.details.licenseTag.setTextColor(getResources().getColor(stateQuery.getState().getColorId(), null));
                     binding.details.licenseTag.setVisibility(View.VISIBLE);
                     upload.setUploadState(stateQuery.getState());
                     upload.setRejectReason(stateQuery.getRejectedReason());
@@ -1048,7 +1037,7 @@ public class DetailsActivity extends AppCompatActivity implements ActivityCompat
             }
 
             @Override
-            public void onFailure(final Call<List<InboxStateQuery>> call, final Throwable t) {
+            public void onFailure(@NonNull final Call<List<InboxStateQuery>> call, @NonNull final Throwable t) {
                 Log.e(TAG, "Error retrieving upload state", t);
                 Toast.makeText(DetailsActivity.this,
                         R.string.error_retrieving_upload_state,
@@ -1069,9 +1058,8 @@ public class DetailsActivity extends AppCompatActivity implements ActivityCompat
     }
 
     private void setBitmap(final Bitmap showBitmap) {
-        final Display display = getWindowManager().getDefaultDisplay();
         final Point size = new Point();
-        display.getSize(size);
+        getWindowManager().getDefaultDisplay().getSize(size);
         final int targetWidth = size.x;
 
         if (showBitmap.getWidth() != targetWidth) {
